--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Push To Yandex Cloud CR
 
 # Controls when the action will run. 
@@ -52,8 +50,39 @@ jobs:
         docker push $NGINX_IMAGE
 
 
-  deploy-yc:
+  deploy-production-yc:
     runs-on: ubuntu-latest
+    needs: [build-backend, build-nginx]
+    enviroment: production
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: Deploy COI VM
+      id: deploy-coi
+      uses: yc-actions/yc-coi-deploy@v1.0.1
+      env:
+        BACKEND_IMAGE: ${{ env.BACKEND_IMAGE }}
+        NGINX_IMAGE: ${{ env.NGINX_IMAGE }}
+        YC_VM_SSH: ${{ secrets.YC_VM_SSH }}
+        YC_VM_USERNAME: ${{ secrets.YC_VM_USERNAME }}
+      with:
+        yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
+        folder-id: ${{ secrets.YC_FOLDER_ID }}
+        VM-name: funnypuny-backend
+        vm-service-account-id: ${{ secrets.YC_SERVICE_ACCOUNT_ID }}
+        vm-cores: 2
+        vm-platform-id: 'standard-v2'
+        vm-memory: 2 GB
+        vm-disk-size: 30Gb
+        vm-core-fraction: 50
+        vm-subnet-id: ${{ secrets.YC_SUBNET_ID }}
+        docker-compose-path: './yandex-cloud/docker-compose.yaml'
+        user-data-path: './yandex-cloud/user-data.yaml'
+
+  deploy-testing-yc:
+    runs-on: ubuntu-latest
+    enviroment: testing
     needs: [build-backend, build-nginx]
     steps:
     - name: Checkout
@@ -70,9 +99,9 @@ jobs:
       with:
         yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
         folder-id: ${{ secrets.YC_FOLDER_ID }}
-        VM-name: ${{ env.ENV_PREFIX }}-funnypuny-backend
+        VM-name: test-funnypuny-backend
         vm-service-account-id: ${{ secrets.YC_SERVICE_ACCOUNT_ID }}
-        vm-cores: 2
+        vm-cores: 1
         vm-platform-id: 'standard-v2'
         vm-memory: 2 GB
         vm-disk-size: 30Gb
