--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -53,7 +53,7 @@ jobs:
   deploy-production-yc:
     runs-on: ubuntu-latest
     needs: [build-backend, build-nginx]
-    enviroment: production
+    environment: production
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -82,7 +82,7 @@ jobs:
 
   deploy-testing-yc:
     runs-on: ubuntu-latest
-    enviroment: testing
+    environment: testing
     needs: [build-backend, build-nginx]
     steps:
     - name: Checkout
