--- a/.github/workflows/production_deploy.yml
+++ b/.github/workflows/production_deploy.yml
@@ -3,6 +3,7 @@ name: Push To Yandex Cloud CR
 # Controls when the action will run. 
 on:
   release:
+    branches: [ "main" ]
     types: [created]
 
 env:
