--- a/.github/workflows/testing_deploy.yml
+++ b/.github/workflows/testing_deploy.yml
@@ -2,6 +2,8 @@ name: Push To Yandex Cloud CR
 
 # Controls when the action will run. 
 on:
+  push:
+    branches: [ "develop" ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
