--- a/.github/workflows/testing_deploy.yml
+++ b/.github/workflows/testing_deploy.yml
@@ -70,6 +70,7 @@ jobs:
         VM-name: test-funnypuny-backend
         vm-service-account-id: ${{ secrets.YC_SERVICE_ACCOUNT_ID }}
         vm-cores: 1
+        vm-platform-id: 'standard-v1'
         vm-memory: 2 GB
         vm-disk-size: 30Gb
         vm-core-fraction: 50
