--- a/.github/workflows/production_deploy.yml
+++ b/.github/workflows/production_deploy.yml
@@ -51,7 +51,7 @@ jobs:
   deploy-production-yc:
     runs-on: ubuntu-latest
     needs: [build-backend, build-nginx]
-    enviroment: production
+    environment: production
     steps:
     - name: Checkout
       uses: actions/checkout@v3
