--- a/docs/api/api.yaml
+++ b/docs/api/api.yaml
@@ -7,7 +7,7 @@ info:
   title: OpenAPI FunnyPuny
   version: 1.0.0
 servers:
-- url: http://api.funnypuny.space/v1
+- url: http://api.funnypuny.space
 paths:
   /ping:
     get:
