--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,13 +3,13 @@ on:
   push:
     branches: [ develop ]
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
+  runs-on: ubuntu-latest
+  steps:
     - uses: actions/checkout@main
     - uses: actions/setup-python@v3
       with:
         python-version: '3.8'
+    - name: Install requirements
     - run: pip install -r requirements.txt
-    - name: Run TestProject Agent
+    - name: Run Tests
     - run: pytest tests
