--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,6 @@ jobs:
           with:
             python-version: '3.8'
         - name: Install requirements
-          run: pip install -r requirements.txt
+          run: pip install -r app/requirements.txt
         - name: Run Tests
           run: pytest tests
