--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,4 +13,6 @@ jobs:
         - name: Install requirements
           run: pip install -r app/requirements.txt
         - name: Run Tests
-          run: pytest tests
+          run: | 
+            pip install pytest
+            pytest tests
