--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,4 @@ jobs:
         - name: Run Tests
           run: | 
             pip install pytest
-            pytest tests
+            pytest app/tests
