--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,4 @@ jobs:
         - name: Run Tests
           run: | 
             pip install pytest
-            PYTHONPATH="/app" pytest tests
+            PYTHONPATH="/app/src/" pytest tests
