--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,4 @@ jobs:
         - name: Run Tests
           run: | 
             pip install pytest
-            PYTHONPATH="/app/src/" pytest app/src/web/tests
+            PYTHONPATH="/app/src/" pytest web/tests
